<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UdpSteeringActivity"
    android:id="@+id/piloting_view">

    <com.parrot.sdksample.view.JSVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/takePictureBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:width="150dp"
        android:alpha="128"
        android:elevation="0dp"
        android:text="@string/takePicture" />

    <Button
        android:id="@+id/downloadBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:width="150dp"
        android:text="@string/download"
        android:visibility="invisible"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/levelBaterry"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/batteryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/xx"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000" />

    <TextView
        android:id="@+id/audioTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/audioBt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/audio"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000"
        android:visibility="invisible" />

    <Button
        android:id="@+id/audioBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/downloadBt"
        android:layout_alignEnd="@+id/batteryLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/batteryLabel"
        android:text="@string/mute"
        android:visibility="invisible" />

    <Button
        android:id="@+id/GoAhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przycisk_1_go_ahead"
        android:layout_alignBaseline="@+id/takePictureBt"
        android:layout_alignBottom="@+id/takePictureBt"
        android:layout_toRightOf="@+id/takePictureBt"
        android:layout_toEndOf="@+id/takePictureBt" />

    <Button
        android:id="@+id/takeaction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przycisk_takeaction2"
        android:layout_below="@+id/takePictureBt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/GoAhead"
        android:layout_toStartOf="@+id/GoAhead" />

</RelativeLayout>
